--- a/src/css/main.css
+++ b/src/css/main.css
@@ -83,5 +83,17 @@
 @import './imports/_debug-children';
 @import './imports/_debug-grid';
 
+.grow {
+    -moz-osx-font-smoothing: grayscale;
+    backface-visibility: hidden;
+    transform: translateZ(0);
+    transition: transform 0.25s ease-out;
+}
+
+.grow:hover,
+.grow:focus {
+    transform: scale(1.05);
+}
+
 /* Uncomment out the line below to help debug layout issues */
 /*@import './imports/_debug';*/
