--- a/src/css/imports/_font-style.css
+++ b/src/css/imports/_font-style.css
@@ -1,5 +1,6 @@
 .i         { font-style: italic; }
 .fs-normal { font-style: normal; }
+.fs-secondary { font-family: var(--font-family-secondary) }
 
 @media (--breakpoint-not-small) {
   .i-ns       { font-style: italic; }
